tests/sksl/errors/ComputeUniform.metal
### Compilation failed:

error: 1: 'uniform' variables are not permitted in compute shaders
uniform int x;
^^^^^^^^^^^^^
1 error
